# internal/api/v1/auth/logout.go
@@ -13,6 +13,7 @@ import (
 // @Produce		plain
 // @Success		302	{string} string	"Redirects to home page"
 // @Router			/auth/logout [post]
+// @Router			/auth/logout [get]
 func Logout(c *gin.Context) {
 	auth.GetDefaultAuth().LogoutHandler(c.Writer, c.Request)
 }
